Chapter5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
Rule 2     start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END
Rule 3     startaux -> function startaux
Rule 4     startaux -> empty
Rule 5     block -> OPENCURL blockaux CLOSECURL
Rule 6     blockaux -> action blockaux
Rule 7     blockaux -> empty
Rule 8     action -> input
Rule 9     action -> output
Rule 10    action -> statement
Rule 11    input -> READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
Rule 12    output -> WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
Rule 13    outputaux -> expression func_print
Rule 14    outputaux -> expression func_print COMA outputaux
Rule 15    declare -> DEC decaux
Rule 16    decaux -> type ID func_declare_var declareaux
Rule 17    decaux -> type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
Rule 18    declareaux -> ENDSTMT
Rule 19    declareaux -> COMA decaux
Rule 20    assign -> ID func_constantID EQUAL func_assign assignaux
Rule 21    assign -> ID func_constantID OPENBRAC func_isSize cte CLOSEBRAC EQUAL assignaux
Rule 22    assignaux -> exp func_assign_value ENDSTMT
Rule 23    assignaux -> OPENCURL assiaux CLOSECURL ENDSTMT
Rule 24    assiaux -> exp
Rule 25    assiaux -> exp COMA assiaux
Rule 26    cte -> ID func_constantID
Rule 27    cte -> BOOLCTE func_constant func_boolCte
Rule 28    cte -> NUMBERCTE func_constant func_numberCte
Rule 29    cte -> WORDCTE func_constant func_wordCte
Rule 30    cte -> SENTENCECTE func_constant func_sentenceCte
Rule 31    type -> BOOL func_type
Rule 32    type -> NUMBER func_type
Rule 33    type -> WORD func_type
Rule 34    type -> SENTENCE func_type
Rule 35    statement -> assign
Rule 36    statement -> expression
Rule 37    statement -> condition
Rule 38    statement -> cycle
Rule 39    statement -> callfunction
Rule 40    expression -> logexpression
Rule 41    expression -> NOT func_logicOp_operation logexpression func_logicOP
Rule 42    logexpression -> relopexpression
Rule 43    logexpression -> relopexpression AND func_logicOp_operation logexpression func_logicOP
Rule 44    logexpression -> relopexpression OR func_logicOp_operation logexpression func_logicOP
Rule 45    relopexpression -> exp
Rule 46    relopexpression -> exp func_relop RELOP func_relop_operation exp func_relop
Rule 47    exp -> term
Rule 48    exp -> term PLUS func_term_operation exp func_term
Rule 49    exp -> term MINUS func_term_operation exp func_term
Rule 50    term -> factor
Rule 51    term -> factor MULT func_factor_operation term func_factor
Rule 52    term -> factor DIV func_factor_operation term func_factor
Rule 53    factor -> OPENPAREN expression CLOSEPAREN
Rule 54    factor -> cte
Rule 55    condition -> IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
Rule 56    condition -> IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
Rule 57    cycle -> WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
Rule 58    cycle -> DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
Rule 59    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
Rule 60    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
Rule 61    funcaux -> type
Rule 62    funcaux -> VOID
Rule 63    parameter -> type ID func_declare_var parameteraux
Rule 64    parameter -> type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array parameteraux
Rule 65    parameteraux -> COMA parameter
Rule 66    parameteraux -> empty
Rule 67    returnaux -> RETURN ID
Rule 68    returnaux -> empty
Rule 69    callfunction -> ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
Rule 70    callfunction -> ID OPENPAREN spaux CLOSEPAREN ENDSTMT
Rule 71    spaux -> cte
Rule 72    spaux -> cte COMA spaux
Rule 73    spaux -> empty
Rule 74    special -> LENGTH
Rule 75    special -> FREQUENCY
Rule 76    special -> SEARCH
Rule 77    special -> EXISTS
Rule 78    special -> MEAN
Rule 79    special -> MEDIAN
Rule 80    special -> MODE
Rule 81    special -> WORDCOUNT
Rule 82    special -> TOKENIZE
Rule 83    special -> REMOVE
Rule 84    empty -> <empty>
Rule 85    func_start -> <empty>
Rule 86    func_isSize -> <empty>
Rule 87    func_declare_var -> <empty>
Rule 88    func_declare_array -> <empty>
Rule 89    func_declare_function -> <empty>
Rule 90    func_type -> <empty>
Rule 91    func_constant -> <empty>
Rule 92    func_constantID -> <empty>
Rule 93    func_boolCte -> <empty>
Rule 94    func_numberCte -> <empty>
Rule 95    func_wordCte -> <empty>
Rule 96    func_sentenceCte -> <empty>
Rule 97    func_begin_main -> <empty>
Rule 98    func_read -> <empty>
Rule 99    func_print -> <empty>
Rule 100   func_assign -> <empty>
Rule 101   func_assign_value -> <empty>
Rule 102   func_term_operation -> <empty>
Rule 103   func_term -> <empty>
Rule 104   func_factor_operation -> <empty>
Rule 105   func_factor -> <empty>
Rule 106   func_relop_operation -> <empty>
Rule 107   func_relop -> <empty>
Rule 108   func_logicOp_operation -> <empty>
Rule 109   func_logicOP -> <empty>
Rule 110   func_if -> <empty>
Rule 111   func_endIf -> <empty>
Rule 112   func_else -> <empty>
Rule 113   func_endElse -> <empty>
Rule 114   func_do -> <empty>
Rule 115   func_endDoWhile -> <empty>
Rule 116   func_while -> <empty>
Rule 117   func_whileExp -> <empty>
Rule 118   func_endWhile -> <empty>
Rule 119   func_clear -> <empty>

Terminals, with rules where they appear

AND                  : 43
BEGIN                : 1 2
BOOL                 : 31
BOOLCTE              : 27
CLOSEBRAC            : 17 21 64
CLOSECURL            : 5 23 59 60
CLOSEPAREN           : 11 12 53 55 56 57 58 59 60 69 70
COMA                 : 14 19 25 65 72
DEC                  : 15
DIV                  : 52
DO                   : 58
DOT                  : 69
ELSE                 : 56
END                  : 1 2
ENDSTMT              : 1 2 11 12 18 22 23 58 59 60 69 70
EQUAL                : 20 21
EXISTS               : 77
FREQUENCY            : 75
FUNC                 : 59 60
ID                   : 1 2 11 16 17 20 21 26 59 60 63 64 67 69 70
IF                   : 55 56
KOTOBA               : 1 2
LENGTH               : 74
MEAN                 : 78
MEDIAN               : 79
MINUS                : 49
MODE                 : 80
MULT                 : 51
NOT                  : 41
NUMBER               : 32
NUMBERCTE            : 28
OPENBRAC             : 17 21 64
OPENCURL             : 5 23 59 60
OPENPAREN            : 11 12 53 55 56 57 58 59 60 69 70
OR                   : 44
PLUS                 : 48
READ                 : 11
RELOP                : 46
REMOVE               : 83
RETURN               : 67
SEARCH               : 76
SENTENCE             : 34
SENTENCECTE          : 30
TOKENIZE             : 82
VOID                 : 62
WHILE                : 57 58
WORD                 : 33
WORDCOUNT            : 81
WORDCTE              : 29
WRITE                : 12
error                : 

Nonterminals, with rules where they appear

action               : 6
assiaux              : 23 25
assign               : 35
assignaux            : 20 21
block                : 1 2 55 56 56 57 58
blockaux             : 5 6 59 60
callfunction         : 39
condition            : 37
cte                  : 17 21 54 64 71 72
cycle                : 38
decaux               : 15 19
declare              : 1 59
declareaux           : 16 17
empty                : 4 7 66 68 73
exp                  : 22 24 25 45 46 46 48 49
expression           : 13 14 36 53 55 56 57 58
factor               : 50 51 52
func_assign          : 20
func_assign_value    : 22
func_begin_main      : 1 2
func_boolCte         : 27
func_clear           : 59 60
func_constant        : 27 28 29 30
func_constantID      : 20 21 26
func_declare_array   : 17 64
func_declare_function : 59 60
func_declare_var     : 16 63
func_do              : 58
func_else            : 56
func_endDoWhile      : 58
func_endElse         : 56
func_endIf           : 55
func_endWhile        : 57
func_factor          : 51 52
func_factor_operation : 51 52
func_if              : 55 56
func_isSize          : 17 21 64
func_logicOP         : 41 43 44
func_logicOp_operation : 41 43 44
func_numberCte       : 28
func_print           : 13 14
func_read            : 11
func_relop           : 46 46
func_relop_operation : 46
func_sentenceCte     : 30
func_start           : 1 2
func_term            : 48 49
func_term_operation  : 48 49
func_type            : 31 32 33 34
func_while           : 57
func_whileExp        : 57
func_wordCte         : 29
funcaux              : 59 60
function             : 3
input                : 8
logexpression        : 40 41 43 44
output               : 9
outputaux            : 12 14
parameter            : 59 60 65
parameteraux         : 63 64
relopexpression      : 42 43 44
returnaux            : 59 60
spaux                : 69 70 72
special              : 69
start                : 0
startaux             : 1 2 3
statement            : 10
term                 : 47 48 49 51 52
type                 : 16 17 61 63 64

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> . KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END

    KOTOBA          shift and go to state 1

    start                          shift and go to state 2

state 1

    (1) start -> KOTOBA . ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA . ID func_start ENDSTMT startaux BEGIN func_begin_main block END

    ID              shift and go to state 3


state 2

    (0) S' -> start .



state 3

    (1) start -> KOTOBA ID . func_start ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID . func_start ENDSTMT startaux BEGIN func_begin_main block END
    (85) func_start -> .

    ENDSTMT         reduce using rule 85 (func_start -> .)

    func_start                     shift and go to state 4

state 4

    (1) start -> KOTOBA ID func_start . ENDSTMT declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID func_start . ENDSTMT startaux BEGIN func_begin_main block END

    ENDSTMT         shift and go to state 5


state 5

    (1) start -> KOTOBA ID func_start ENDSTMT . declare startaux BEGIN func_begin_main block END
    (2) start -> KOTOBA ID func_start ENDSTMT . startaux BEGIN func_begin_main block END
    (15) declare -> . DEC decaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (84) empty -> .

    DEC             shift and go to state 6
    FUNC            shift and go to state 10
    BEGIN           reduce using rule 84 (empty -> .)

    function                       shift and go to state 9
    empty                          shift and go to state 8
    startaux                       shift and go to state 7
    declare                        shift and go to state 11

state 6

    (15) declare -> DEC . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    decaux                         shift and go to state 15
    type                           shift and go to state 17

state 7

    (2) start -> KOTOBA ID func_start ENDSTMT startaux . BEGIN func_begin_main block END

    BEGIN           shift and go to state 18


state 8

    (4) startaux -> empty .

    BEGIN           reduce using rule 4 (startaux -> empty .)


state 9

    (3) startaux -> function . startaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (84) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 84 (empty -> .)

    function                       shift and go to state 9
    startaux                       shift and go to state 19
    empty                          shift and go to state 8

state 10

    (59) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (61) funcaux -> . type
    (62) funcaux -> . VOID
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    VOID            shift and go to state 21
    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    type                           shift and go to state 20
    funcaux                        shift and go to state 22

state 11

    (1) start -> KOTOBA ID func_start ENDSTMT declare . startaux BEGIN func_begin_main block END
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (59) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (84) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 84 (empty -> .)

    function                       shift and go to state 9
    empty                          shift and go to state 8
    startaux                       shift and go to state 23

state 12

    (34) type -> SENTENCE . func_type
    (90) func_type -> .

    ID              reduce using rule 90 (func_type -> .)

    func_type                      shift and go to state 24

state 13

    (32) type -> NUMBER . func_type
    (90) func_type -> .

    ID              reduce using rule 90 (func_type -> .)

    func_type                      shift and go to state 25

state 14

    (31) type -> BOOL . func_type
    (90) func_type -> .

    ID              reduce using rule 90 (func_type -> .)

    func_type                      shift and go to state 26

state 15

    (15) declare -> DEC decaux .

    FUNC            reduce using rule 15 (declare -> DEC decaux .)
    BEGIN           reduce using rule 15 (declare -> DEC decaux .)
    READ            reduce using rule 15 (declare -> DEC decaux .)
    WRITE           reduce using rule 15 (declare -> DEC decaux .)
    ID              reduce using rule 15 (declare -> DEC decaux .)
    NOT             reduce using rule 15 (declare -> DEC decaux .)
    IF              reduce using rule 15 (declare -> DEC decaux .)
    WHILE           reduce using rule 15 (declare -> DEC decaux .)
    DO              reduce using rule 15 (declare -> DEC decaux .)
    OPENPAREN       reduce using rule 15 (declare -> DEC decaux .)
    BOOLCTE         reduce using rule 15 (declare -> DEC decaux .)
    NUMBERCTE       reduce using rule 15 (declare -> DEC decaux .)
    WORDCTE         reduce using rule 15 (declare -> DEC decaux .)
    SENTENCECTE     reduce using rule 15 (declare -> DEC decaux .)
    RETURN          reduce using rule 15 (declare -> DEC decaux .)
    ENDSTMT         reduce using rule 15 (declare -> DEC decaux .)


state 16

    (33) type -> WORD . func_type
    (90) func_type -> .

    ID              reduce using rule 90 (func_type -> .)

    func_type                      shift and go to state 27

state 17

    (16) decaux -> type . ID func_declare_var declareaux
    (17) decaux -> type . ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux

    ID              shift and go to state 28


state 18

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN . func_begin_main block END
    (97) func_begin_main -> .

    OPENCURL        reduce using rule 97 (func_begin_main -> .)

    func_begin_main                shift and go to state 29

state 19

    (3) startaux -> function startaux .

    BEGIN           reduce using rule 3 (startaux -> function startaux .)


state 20

    (61) funcaux -> type .

    ID              reduce using rule 61 (funcaux -> type .)


state 21

    (62) funcaux -> VOID .

    ID              reduce using rule 62 (funcaux -> VOID .)


state 22

    (59) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear

    ID              shift and go to state 30


state 23

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux . BEGIN func_begin_main block END

    BEGIN           shift and go to state 31


state 24

    (34) type -> SENTENCE func_type .

    ID              reduce using rule 34 (type -> SENTENCE func_type .)


state 25

    (32) type -> NUMBER func_type .

    ID              reduce using rule 32 (type -> NUMBER func_type .)


state 26

    (31) type -> BOOL func_type .

    ID              reduce using rule 31 (type -> BOOL func_type .)


state 27

    (33) type -> WORD func_type .

    ID              reduce using rule 33 (type -> WORD func_type .)


state 28

    (16) decaux -> type ID . func_declare_var declareaux
    (17) decaux -> type ID . OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (87) func_declare_var -> .

    OPENBRAC        shift and go to state 32
    ENDSTMT         reduce using rule 87 (func_declare_var -> .)
    COMA            reduce using rule 87 (func_declare_var -> .)

    func_declare_var               shift and go to state 33

state 29

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 35

state 30

    (59) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear
    (89) func_declare_function -> .

    OPENPAREN       reduce using rule 89 (func_declare_function -> .)

    func_declare_function          shift and go to state 36

state 31

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN . func_begin_main block END
    (97) func_begin_main -> .

    OPENCURL        reduce using rule 97 (func_begin_main -> .)

    func_begin_main                shift and go to state 37

state 32

    (17) decaux -> type ID OPENBRAC . func_isSize cte CLOSEBRAC func_declare_array declareaux
    (86) func_isSize -> .

    ID              reduce using rule 86 (func_isSize -> .)
    BOOLCTE         reduce using rule 86 (func_isSize -> .)
    NUMBERCTE       reduce using rule 86 (func_isSize -> .)
    WORDCTE         reduce using rule 86 (func_isSize -> .)
    SENTENCECTE     reduce using rule 86 (func_isSize -> .)

    func_isSize                    shift and go to state 38

state 33

    (16) decaux -> type ID func_declare_var . declareaux
    (18) declareaux -> . ENDSTMT
    (19) declareaux -> . COMA decaux

    ENDSTMT         shift and go to state 39
    COMA            shift and go to state 40

    declareaux                     shift and go to state 41

state 34

    (5) block -> OPENCURL . blockaux CLOSECURL
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (84) empty -> .
    (11) input -> . READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (35) statement -> . assign
    (36) statement -> . expression
    (37) statement -> . condition
    (38) statement -> . cycle
    (39) statement -> . callfunction
    (20) assign -> . ID func_constantID EQUAL func_assign assignaux
    (21) assign -> . ID func_constantID OPENBRAC func_isSize cte CLOSEBRAC EQUAL assignaux
    (40) expression -> . logexpression
    (41) expression -> . NOT func_logicOp_operation logexpression func_logicOP
    (55) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
    (56) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
    (57) cycle -> . WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
    (58) cycle -> . DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
    (69) callfunction -> . ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (70) callfunction -> . ID OPENPAREN spaux CLOSEPAREN ENDSTMT
    (42) logexpression -> . relopexpression
    (43) logexpression -> . relopexpression AND func_logicOp_operation logexpression func_logicOP
    (44) logexpression -> . relopexpression OR func_logicOp_operation logexpression func_logicOP
    (45) relopexpression -> . exp
    (46) relopexpression -> . exp func_relop RELOP func_relop_operation exp func_relop
    (47) exp -> . term
    (48) exp -> . term PLUS func_term_operation exp func_term
    (49) exp -> . term MINUS func_term_operation exp func_term
    (50) term -> . factor
    (51) term -> . factor MULT func_factor_operation term func_factor
    (52) term -> . factor DIV func_factor_operation term func_factor
    (53) factor -> . OPENPAREN expression CLOSEPAREN
    (54) factor -> . cte
    (26) cte -> . ID func_constantID
    (27) cte -> . BOOLCTE func_constant func_boolCte
    (28) cte -> . NUMBERCTE func_constant func_numberCte
    (29) cte -> . WORDCTE func_constant func_wordCte
    (30) cte -> . SENTENCECTE func_constant func_sentenceCte

    CLOSECURL       reduce using rule 84 (empty -> .)
    READ            shift and go to state 46
    WRITE           shift and go to state 57
    ID              shift and go to state 60
    NOT             shift and go to state 58
    IF              shift and go to state 52
    WHILE           shift and go to state 64
    DO              shift and go to state 43
    OPENPAREN       shift and go to state 48
    BOOLCTE         shift and go to state 45
    NUMBERCTE       shift and go to state 42
    WORDCTE         shift and go to state 44
    SENTENCECTE     shift and go to state 47

    callfunction                   shift and go to state 49
    statement                      shift and go to state 50
    input                          shift and go to state 51
    blockaux                       shift and go to state 54
    factor                         shift and go to state 55
    logexpression                  shift and go to state 56
    relopexpression                shift and go to state 59
    condition                      shift and go to state 61
    cycle                          shift and go to state 62
    term                           shift and go to state 63
    cte                            shift and go to state 65
    empty                          shift and go to state 53
    exp                            shift and go to state 66
    action                         shift and go to state 67
    output                         shift and go to state 68
    expression                     shift and go to state 69
    assign                         shift and go to state 70

state 35

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block . END

    END             shift and go to state 71


state 36

    (59) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL func_clear
    (60) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL func_clear

    OPENPAREN       shift and go to state 72


state 37

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 34

    block                          shift and go to state 73

state 38

    (17) decaux -> type ID OPENBRAC func_isSize . cte CLOSEBRAC func_declare_array declareaux
    (26) cte -> . ID func_constantID
    (27) cte -> . BOOLCTE func_constant func_boolCte
    (28) cte -> . NUMBERCTE func_constant func_numberCte
    (29) cte -> . WORDCTE func_constant func_wordCte
    (30) cte -> . SENTENCECTE func_constant func_sentenceCte

    ID              shift and go to state 75
    BOOLCTE         shift and go to state 45
    NUMBERCTE       shift and go to state 42
    WORDCTE         shift and go to state 44
    SENTENCECTE     shift and go to state 47

    cte                            shift and go to state 74

state 39

    (18) declareaux -> ENDSTMT .

    FUNC            reduce using rule 18 (declareaux -> ENDSTMT .)
    BEGIN           reduce using rule 18 (declareaux -> ENDSTMT .)
    READ            reduce using rule 18 (declareaux -> ENDSTMT .)
    WRITE           reduce using rule 18 (declareaux -> ENDSTMT .)
    ID              reduce using rule 18 (declareaux -> ENDSTMT .)
    NOT             reduce using rule 18 (declareaux -> ENDSTMT .)
    IF              reduce using rule 18 (declareaux -> ENDSTMT .)
    WHILE           reduce using rule 18 (declareaux -> ENDSTMT .)
    DO              reduce using rule 18 (declareaux -> ENDSTMT .)
    OPENPAREN       reduce using rule 18 (declareaux -> ENDSTMT .)
    BOOLCTE         reduce using rule 18 (declareaux -> ENDSTMT .)
    NUMBERCTE       reduce using rule 18 (declareaux -> ENDSTMT .)
    WORDCTE         reduce using rule 18 (declareaux -> ENDSTMT .)
    SENTENCECTE     reduce using rule 18 (declareaux -> ENDSTMT .)
    RETURN          reduce using rule 18 (declareaux -> ENDSTMT .)
    ENDSTMT         reduce using rule 18 (declareaux -> ENDSTMT .)


state 40

    (19) declareaux -> COMA . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (31) type -> . BOOL func_type
    (32) type -> . NUMBER func_type
    (33) type -> . WORD func_type
    (34) type -> . SENTENCE func_type

    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    decaux                         shift and go to state 76
    type                           shift and go to state 17

state 41

    (16) decaux -> type ID func_declare_var declareaux .

    FUNC            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    BEGIN           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    READ            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WRITE           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    ID              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    NOT             reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    IF              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WHILE           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    DO              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    OPENPAREN       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    BOOLCTE         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    NUMBERCTE       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WORDCTE         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    SENTENCECTE     reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    RETURN          reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    ENDSTMT         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)


state 42

    (28) cte -> NUMBERCTE . func_constant func_numberCte
    (91) func_constant -> .

    MULT            reduce using rule 91 (func_constant -> .)
    DIV             reduce using rule 91 (func_constant -> .)
    PLUS            reduce using rule 91 (func_constant -> .)
    MINUS           reduce using rule 91 (func_constant -> .)
    RELOP           reduce using rule 91 (func_constant -> .)
    AND             reduce using rule 91 (func_constant -> .)
    OR              reduce using rule 91 (func_constant -> .)
    READ            reduce using rule 91 (func_constant -> .)
    WRITE           reduce using rule 91 (func_constant -> .)
    ID              reduce using rule 91 (func_constant -> .)
    NOT             reduce using rule 91 (func_constant -> .)
    IF              reduce using rule 91 (func_constant -> .)
    WHILE           reduce using rule 91 (func_constant -> .)
    DO              reduce using rule 91 (func_constant -> .)
    OPENPAREN       reduce using rule 91 (func_constant -> .)
    BOOLCTE         reduce using rule 91 (func_constant -> .)
    NUMBERCTE       reduce using rule 91 (func_constant -> .)
    WORDCTE         reduce using rule 91 (func_constant -> .)
    SENTENCECTE     reduce using rule 91 (func_constant -> .)
    CLOSECURL       reduce using rule 91 (func_constant -> .)
    CLOSEBRAC       reduce using rule 91 (func_constant -> .)
    CLOSEPAREN      reduce using rule 91 (func_constant -> .)
    RETURN          reduce using rule 91 (func_constant -> .)
    ENDSTMT         reduce using rule 91 (func_constant -> .)
    COMA            reduce using rule 91 (func_constant -> .)

    func_constant                  shift and go to state 77

state 43

    (58) cycle -> DO . func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
    (114) func_do -> .

    OPENCURL        reduce using rule 114 (func_do -> .)

    func_do                        shift and go to state 78

state 44

    (29) cte -> WORDCTE . func_constant func_wordCte
    (91) func_constant -> .

    MULT            reduce using rule 91 (func_constant -> .)
    DIV             reduce using rule 91 (func_constant -> .)
    PLUS            reduce using rule 91 (func_constant -> .)
    MINUS           reduce using rule 91 (func_constant -> .)
    RELOP           reduce using rule 91 (func_constant -> .)
    AND             reduce using rule 91 (func_constant -> .)
    OR              reduce using rule 91 (func_constant -> .)
    READ            reduce using rule 91 (func_constant -> .)
    WRITE           reduce using rule 91 (func_constant -> .)
    ID              reduce using rule 91 (func_constant -> .)
    NOT             reduce using rule 91 (func_constant -> .)
    IF              reduce using rule 91 (func_constant -> .)
    WHILE           reduce using rule 91 (func_constant -> .)
    DO              reduce using rule 91 (func_constant -> .)
    OPENPAREN       reduce using rule 91 (func_constant -> .)
    BOOLCTE         reduce using rule 91 (func_constant -> .)
    NUMBERCTE       reduce using rule 91 (func_constant -> .)
    WORDCTE         reduce using rule 91 (func_constant -> .)
    SENTENCECTE     reduce using rule 91 (func_constant -> .)
    CLOSECURL       reduce using rule 91 (func_constant -> .)
    CLOSEBRAC       reduce using rule 91 (func_constant -> .)
    CLOSEPAREN      reduce using rule 91 (func_constant -> .)
    RETURN          reduce using rule 91 (func_constant -> .)
    ENDSTMT         reduce using rule 91 (func_constant -> .)
    COMA            reduce using rule 91 (func_constant -> .)

    func_constant                  shift and go to state 79

state 45

    (27) cte -> BOOLCTE . func_constant func_boolCte
    (91) func_constant -> .

    MULT            reduce using rule 91 (func_constant -> .)
    DIV             reduce using rule 91 (func_constant -> .)
    PLUS            reduce using rule 91 (func_constant -> .)
    MINUS           reduce using rule 91 (func_constant -> .)
    RELOP           reduce using rule 91 (func_constant -> .)
    AND             reduce using rule 91 (func_constant -> .)
    OR              reduce using rule 91 (func_constant -> .)
    READ            reduce using rule 91 (func_constant -> .)
    WRITE           reduce using rule 91 (func_constant -> .)
    ID              reduce using rule 91 (func_constant -> .)
    NOT             reduce using rule 91 (func_constant -> .)
    IF              reduce using rule 91 (func_constant -> .)
    WHILE           reduce using rule 91 (func_constant -> .)
    DO              reduce using rule 91 (func_constant -> .)
    OPENPAREN       reduce using rule 91 (func_constant -> .)
    BOOLCTE         reduce using rule 91 (func_constant -> .)
    NUMBERCTE       reduce using rule 91 (func_constant -> .)
    WORDCTE         reduce using rule 91 (func_constant -> .)
    SENTENCECTE     reduce using rule 91 (func_constant -> .)
    CLOSECURL       reduce using rule 91 (func_constant -> .)
    CLOSEBRAC       reduce using rule 91 (func_constant -> .)
    CLOSEPAREN      reduce using rule 91 (func_constant -> .)
    RETURN          reduce using rule 91 (func_constant -> .)
    ENDSTMT         reduce using rule 91 (func_constant -> .)
    COMA            reduce using rule 91 (func_constant -> .)

    func_constant                  shift and go to state 80

state 46

    (11) input -> READ . OPENPAREN ID func_read CLOSEPAREN ENDSTMT

    OPENPAREN       shift and go to state 81


state 47

    (30) cte -> SENTENCECTE . func_constant func_sentenceCte
    (91) func_constant -> .
